Added controller that gives IP Address based on domain name